# SoapySdrLoppback

./: CMakeLists.txt  LICENSE.txt  README.md  Registration.cpp  Settings.cpp  SoapyLoopback.cpp  SoapyLoopback.hpp  SoapyLoopbackConnector.cpp  SoapyLoopbackConnector.hpp  SoapyLoopbackRx.cpp  SoapyLoopbackRx.hpp  SoapyLoopbackTx.cpp  SoapyLoopbackTx.hpp  config.h.in
